...
  }));

  return (
    <Animated.View style={[styles.header, {paddingTop: insets.top + 16}]}>
      <Animated.View style={styles.titleRow}>
        <Animated.View>
          <Animated.Text style={styles.title} testID='pokedex-title'>Pokédex</Animated.Text>
          <Animated.Text style={styles.subtitle} testID='pokedex-subtitle'>
            Busca un Pokémon por nombre o número.
          </Animated.Text>
        </Animated.View>

        <Pressable
...
